add test case stuff

--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --runInBand --no-cache"
+    "generate-test-cases": "node codegen && node codegen-regex",
+    "test-oom": "jest --runInBand --no-cache ./tests",
+    "test-regex-oom": "jest --runInBand --no-cache ./tests-regex"
   },
   "keywords": [],
   "author": "",
