--- a/.gitignore
+++ b/.gitignore
@@ -129,7 +129,7 @@ dist
 .yarn/install-state.gz
 .pnp.*
 
-tests/*
-!tests/.gitkeep
+tests-leak/*
+!tests-leak/.gitkeep
 tests-regex/*
 !tests-regex/.gitkeep
